@@ -6,6 +6,7 @@ What's New for OpenJPEG
 + : added
 
 October 19, 2011
+* [mickael] WIP: solve problem with writing of tga image from an image with signd=1 (credit to Winfried)
 * [mickael] WIP: resolve some memory leak in compare functions
 
 October 12, 2011
